test/testdata/functions/anonymous/missing_2_args_error.lox
var add = fun(a, b) {
  print a + b;
};

add(); // error: (anonymous)() accepts 2 arguments but 0 were given
